columns class bug overflowing body solved

--- a/assets/main.css
+++ b/assets/main.css
@@ -1,26 +1,29 @@
 @import url("./fonts.css");
 
+html{
+  scroll-behavior: smooth;
+}
 .bounce-enter-active {
-    animation: bounce-in .5s;
+  animation: bounce-in .5s;
+}
+.bounce-leave-active {
+  animation: bounce-in .5s reverse;
+}
+@keyframes bounce-in {
+  0% {
+    transform: scale(0);
   }
-  .bounce-leave-active {
-    animation: bounce-in .5s reverse;
+  50% {
+    transform: scale(1.5);
   }
-  @keyframes bounce-in {
-    0% {
-      transform: scale(0);
-    }
-    50% {
-      transform: scale(1.5);
-    }
-    100% {
-      transform: scale(1);
-    }
+  100% {
+    transform: scale(1);
   }
+}
 
-  .fade-enter-active, .fade-leave-active {
-    transition: opacity .5s;
-  }
-  .fade-enter, .fade-leave-to /* .fade-leave-active em versões anteriores a 2.1.8 */ {
-    opacity: 0;
-  }
+.fade-enter-active, .fade-leave-active {
+  transition: opacity .5s;
+}
+.fade-enter, .fade-leave-to /* .fade-leave-active em versões anteriores a 2.1.8 */ {
+  opacity: 0;
+}
